// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interactive layout visual agreements matches the active docked-core render snapshot 1`] = `
"qwen-local  │  Tool  0:02
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  ✽ note Inspecting files before editing.

  $ npm test -- src/__tests__/interactive-tui.test.ts
    output     PASS























───────────────────────────────────────────────────
> continue polishing the feed
"
`;

exports[`interactive layout visual agreements matches the blocked budget-exhausted render snapshot 1`] = `
"Budget exhausted  0:00
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────


  ? error      terminal issue
    next       inspect the message below, then rerun
    message    max steps exceeded: 32























───────────────────────────────────────────────────
> Ask Synax to inspect, edit, test, or commit…"
`;

exports[`interactive layout visual agreements matches the completed render snapshot 1`] = `
"Ready  0:00
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  No runtime events yet.



























───────────────────────────────────────────────────
> Ask Synax to inspect, edit, test, or commit…"
`;

exports[`interactive layout visual agreements matches the idle large-core render snapshot 1`] = `
"
───────────────────────────────────────────────────────────────────────────────


                                   ·  ·.
                               ·╲╲╲╲  ·.  ╱╱╱╱.
                           ◎  ╲╲  ◎╭───────╮  ╱╱  ◎
                          ◎  ─◎  ◎ │◎◎◎◎◎◎◎│◎  ◎─  ◎
                          · ─.   ..│◎◎◎◎◎◎◎│.   ·─
                          ·  ─.  . │◎◎◎◎◎◎·│·  ·─  .
                           .  ╱╱  ·╰───────╯  ╲╲  ·
                               .╱╱╱╱      ╲╲╲╲·  ·
                                      ..  .


                              Welcome






───────────────────────────────────────────────────
> Ask Synax to inspect, edit, test, or commit…"
`;

exports[`interactive layout visual agreements matches the narrow terminal fallback snapshot 1`] = `
"Working  0:02
───────────────────────────────────────────────────────
  ✽ note Inspecting files before editing.


  ◌ working









───────────────────────────────────────────────────
> short task
"
`;
